# sps

./: .common_setup  .eccc_setup_gnu  .eccc_setup_intel  .eccc_setup_intel_2021.4.0  .git-subtree  .gitignore  .gitlab-ci.yml  .gitmodules  .initial_setup  .setenv.dot  CMakeLists.txt  Config.cmake.in  DEPENDENCIES.mig.bndl  MANIFEST  Makefile  README  README-  README.md  README_my_notes  VERSION  _cado  cado  config.in  download-dbase.sh
.ssm.d/: post-install.in
doc/: README.run
include/: Makefile.local.sps.mk  Makefile.ssm.mk  sps.dict
scripts/: checknml  link-dbase.sh  sps.sh  sps_batch_submit.sh  sps_ddt.sh  sps_nml_mkref  sps_nml_update
share/: Makefile.user.mk  sps_versions_components.txt
share/cfgs/cfg_RI/cfg_0000/: configexp.cfg  outcfg.out  sps.cfg
share/configurations/: README
share/configurations/SPS_cfgs/cfg_0000/: configexp.cfg  physics_input_table  sps.cfg
share/configurations/SPS_isba_cfgs/cfg_0000/: configexp.cfg  physics_input_table  sps.cfg
share/configurations/caldas_hrdps_isba/cfg_0000/: configexp.cfg  outcfg.out  physics_input_table_zvg2  sps.cfg
share/configurations/hrdlps/cfg_0000/: README  configexp.cfg  outcfg.out  physics_input_table  sps.cfg
share/configurations/tape1_grid/cfg_0000/: configexp.cfg  outcfg.out  sps.cfg  sps.cfg_nml  tape1
share/configurations/yan15/cfg_0000/: configexp.cfg  sps.cfg
share/configurations/yin15/cfg_0000/: configexp.cfg  sps.cfg
share/misc/: sps.dict
share/nml_upd/: rpnphy_nml_update_db.txt
src/: CMakeLists.txt
src/base/: dyn_grid.F90  dyn_input.F90  dyn_itf.F90  dyn_levels.F90  dyn_output.F90  dyn_output_callback.F90  dyn_step.F90  itf_phy_getijlalo.F90  itf_phy_rdfile.F90  itf_prefold_opr.F90  phys_itf_mod.F90  phys_prestep.F90  sps.F90  sps_set_dcst.F90  sps_yyencode.F90  sps_yyg_checkrot.F90
src/modelutils/: MANIFEST
src/rpnphy/src/main/: CMakeLists.txt
src/sps/: CMakeLists.txt
src/sps/include/: sps_version.in
src/sps/src/base/: dyn_output.F90  dyn_output_callback.F90  dyn_step.F90  itf_phy_rdfile.F90  itf_prefold_opr.F90  phys_prestep.F90  sps_yyencode.F90  sps_yyg_checkrot.F90  spsdm.F90
src/sps/src/main/: mainspsdm.in
